--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <title>Dashboard de Rendimiento Deportivo</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://apis.google.com/js/api.js"></script>
-    <script src="https://accounts.google.com/gsi/client"></script>
+    
+    <!-- Google API Scripts Loading Logic -->
+    <script>
+      // These functions will be called by the Google scripts once they are loaded.
+      // They dispatch custom events that the React app will listen for.
+      function onGapiLoad() { window.dispatchEvent(new Event('gapiLoaded')); }
+      function onGsiLoad() { window.dispatchEvent(new Event('gsiLoaded')); }
+    </script>
+    <script src="https://apis.google.com/js/api.js?onload=onGapiLoad" async defer></script>
+    <script src="https://accounts.google.com/gsi/client?onload=onGsiLoad" async defer></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
