FIX: Implementar inicialización orquestada a prueba de fallos para resolver pantalla en blanco

--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     
-    <!-- Google API Scripts Loading Logic -->
-    <script>
-      // These functions will be called by the Google scripts once they are loaded.
-      // They dispatch custom events that the React app will listen for.
-      function onGapiLoad() { window.dispatchEvent(new Event('gapiLoaded')); }
-      function onGsiLoad() { window.dispatchEvent(new Event('gsiLoaded')); }
-    </script>
-    <script src="https://apis.google.com/js/api.js?onload=onGapiLoad" async defer></script>
-    <script src="https://accounts.google.com/gsi/client?onload=onGsiLoad" async defer></script>
+    <!-- Google API Scripts have been removed. They will be loaded dynamically by the App. -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
