FIX: Implementar inicialización orquestada a prueba de fallos para resolver pantalla en blanco

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       body { font-family: 'Inter', sans-serif; }
     </style>
 
-    <!-- Importmap limpio (React 18) -->
+    <!-- Importmap limpio: solo React 18 -->
     <script type="importmap">
     {
       "imports": {
